      update. (John Arbash Meinel, #213771)

    * ``Branch.reconcile()`` is now implemented. This allows ``bzr reconcile``
      to fix when a Branch has a non-canonical mainline history. ``bzr check``
      also detects this condition. (John Arbash Meinel, #177855)

    * ``bzr commit`` now works with Microsoft's FTP service.
      (Andreas Deininger)

    * Conversion from non-rich-root to rich-root(-pack) updates inventory
      sha1s, even when bundles are used.  (Aaron Bentley, #181391)

    * Conversion from non-rich-root to rich-root(-pack) works correctly even
      though search keys are not topologically sorted.  (Aaron Bentley)

    * Conversion from non-rich-root to rich-root(-pack) works even when a
      parent revision has a different root id.  (Aaron Bentley, #177874)

    * Disable strace testing until strace is fixed (see bug #103133) and emit a
      warning when selftest ends to remind us of leaking tests.
      (Vincent Ladeuil, #226769)

    * Fetching all revisions from a repository does not cause pack collisions.
      (Robert Collins, Aaron Bentley, #212908)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #217701)

    * Pushing a branch in "dirstate" format (Branch5) over bzr+ssh would break
      if the remote server was < version 1.2. This was due to a bug in the
      RemoteRepository.get_parent_map() fallback code.
      (John Arbash Meinel, #214894)

    * Remove leftover code in ``bzr_branch`` that inappropriately creates 
      a ``branch-name`` file in the branch control directory.
      (Martin Pool)

    * Set SO_REUSEADDR on server sockets of ``bzr serve`` to avoid problems
      rebinding the socket when starting the server a second time.
      (John Arbash Meinel, Martin Pool, #164288)

    * Severe performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph